@@ -1,8 +1,8 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.5-7
-Date: 2015-07-28
+Version: 1.5-8
+Date: 2015-08-13
 Packaged: 2015-06-11; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
